--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="css/login.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,7 +19,7 @@
   <body>
     <section class="main">
       <figure class="main__figure">
-        <img src="/3343892.png" class="main__img" />
+        <img src="images/3343892.png" class="main__img" />
       </figure>
 
       <div class="main__contact">
@@ -31,9 +31,22 @@
             type="text"
             placeholder="ingrese su usuario"
             class="main__input"
+            required
           />
 
-          <input type="password" placeholder="Contraseña" class="main__input" />
+          <input
+            type="email"
+            placeholder="ingrese su correo"
+            class="main__input"
+            required
+          />
+
+          <input
+            type="password"
+            placeholder="Contraseña"
+            class="main__input"
+            required
+          />
 
           <input
             type="submit"
@@ -48,15 +61,15 @@
 
         <article class="main__social">
           <a href="#" class="main__link">
-            <img src="/google-icon.svg" class="main__icon" />
+            <img src="images/google-icon.svg" class="main__icon" />
           </a>
 
           <a href="#" class="main__link">
-            <img src="/apple.svg" class="main__icon" />
+            <img src="images/apple.svg" class="main__icon" />
           </a>
 
           <a href="#" class="main__link">
-            <img src="/facebook.svg" class="main__icon" />
+            <img src="images/facebook.svg" class="main__icon" />
           </a>
         </article>
       </div>
