--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="css/login.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,7 +25,7 @@
   <body>
     <section class="main">
       <figure class="main__figure">
-        <img src="/3343892.png" class="main__img" />
+        <img src="images/3343892.png" class="main__img" />
       </figure>
 
       <div class="main__contact">
@@ -37,12 +37,14 @@
             type="text"
             placeholder="Ingrese su nombre"
             class="main__input"
+            required
           />
 
           <input
             type="text"
             placeholder="ingrese su apellido"
             class="main__input"
+            required
           />
 
           <input
@@ -55,18 +57,21 @@
             type="email"
             placeholder="ingrese su correo electronico"
             class="main__input"
+            required
           />
 
           <input
             type="password"
             placeholder="ingrese su contraseña"
             class="main__input"
+            required
           />
 
           <input
             type="password"
             placeholder="confirme su contraseña"
             class="main__input"
+            required
           />
 
           <input
@@ -82,15 +87,15 @@
 
         <article class="main__social">
           <a href="#" class="main__link">
-            <img src="/google-icon.svg" class="main__icon" />
+            <img src="images/google-icon.svg" class="main__icon" />
           </a>
 
           <a href="#" class="main__link">
-            <img src="/apple.svg" class="main__icon" />
+            <img src="images/apple.svg" class="main__icon" />
           </a>
 
           <a href="#" class="main__link">
-            <img src="/facebook.svg" class="main__icon" />
+            <img src="images/facebook.svg" class="main__icon" />
           </a>
         </article>
       </div>
