--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,8 @@ body {
   margin: 1rem;
   width: 100%;
   height: 100vh;
-  overflow-x: hidden;
+  overflow-x: auto;
+  overflow-y: auto;
 
   background-color: #fafbfb;
 }
@@ -144,7 +145,6 @@ button {
     font-size: 18px;
   }
 }
-
 /* ==== WRAPPER ==== */
 .wrapper {
   width: 100%;
