--- a/views/acercade.ejs
+++ b/views/acercade.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Undefined Security Company</title>
+    <title>Centinela</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -29,7 +29,7 @@
       <h1><%= %></h1>
       <nav class="nav">
         <div class="logo">
-          <h2>Undefined Security Company</h2>
+          <h2>Centinela</h2>
         </div>
         <div class="nav_menu" id="nav_menu">
           <button class="close_btn" id="close_btn">
@@ -62,7 +62,7 @@
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
-            <img src="/1.jpeg" alt="" class="img-fluid card-img-top" />
+            <img src="images/1.jpeg" alt="" class="img-fluid card-img-top" />
             <div class="p-4">
               <h5>
                 <a href="/register" class="text-dark">register</a>
@@ -74,7 +74,7 @@
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
-            <img src="/2.jpeg" alt="" class="img-fluid card-img-top" />
+            <img src="images/2.jpeg" alt="" class="img-fluid card-img-top" />
             <div class="p-4">
               <h5>
                 <a href="/login" class="text-dark">login</a>
@@ -87,7 +87,7 @@
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
-            <img src="/3.jpeg" alt="" class="img-fluid card-img-top" />
+            <img src="images/3.jpeg" alt="" class="img-fluid card-img-top" />
             <div class="p-4">
               <h5>
                 <a href="/checklist" class="text-dark">checklist</a>
