--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Landing Page using HTML, CSS & Javascript</title>
+    <title>Centinela</title>
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="checklist.css" />
+    <link rel="stylesheet" href="css/checklist.css" />
 
     <!--==== REMIXICON CDN ==== -->
     <link
@@ -23,7 +23,7 @@
 
       <nav class="nav">
         <div class="logo">
-          <h2>LabuSegu</h2>
+          <h2>Centinela</h2>
         </div>
         <div class="nav_menu" id="nav_menu">
           <button class="close_btn" id="close_btn">
