--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Landing Page using HTML, CSS & Javascript</title>
+    <title>Centinela</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -22,7 +29,7 @@
 
       <nav class="nav">
         <div class="logo">
-          <h2>Undefined Security Company</h2>
+          <h2>Centinela</h2>
         </div>
         <div class="nav_menu" id="nav_menu">
           <button class="close_btn" id="close_btn">
@@ -50,7 +57,48 @@
       </nav>
     </header>
 
+    <!-- - ==== HERO ==== → -->
+    <section class="hero">
+      <div class="hero_content">
+        <h1 class="hero_title">Cuenta</h1>
+        <section>
+          <!--Tarjetera nueva  -->
+          <div class="row">
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+              <div class="bg-white rounded shadow-sm">
+                <img src="images/1.jpeg" alt="" class="img-fluid card-img-top" />
+                <div class="p-4">
+                  <h5>
+                    <a href="/register" class="text-dark">register</a>
+                  </h5>
+                </div>
+              </div>
+            </div>
+            <!-- End -->
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+              <div class="bg-white rounded shadow-sm">
+                <img src="images/2.jpeg" alt="" class="img-fluid card-img-top" />
+                <div class="p-4">
+                  <h5>
+                    <a href="/login" class="text-dark">login</a>
+                  </h5>
+                </div>
+              </div>
+            </div>
+            <!-- End -->
+          </div>
+        </section>
+      </div>
+
     <footer></footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
 
     <!--==== ANIMATE ON SCROLL JS CDN -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
