--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Undefined Security Company</title>
+    <title>Centinela</title>
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
@@ -22,7 +22,7 @@
       <h1><%= %></h1>
       <nav class="nav">
         <div class="logo">
-          <h2>Undefined Security Company</h2>
+          <h2>Centinela</h2>
         </div>
         <div class="nav_menu" id="nav_menu">
           <button class="close_btn" id="close_btn">
@@ -56,9 +56,7 @@
           <div class="grid-item-1">
             <h1 class="main-heading">
               Bienvenidos a
-              <span style="font-size: 1.5rem"
-                >{Undefined Security Company}</span
-              >
+              <span>Centinela</span>
             </h1>
             <p class="info-text">
               En nuestra página, encontrarás una amplia gama de contenido
