agregado seccion proyectos

--- a/views/proyectos.ejs
+++ b/views/proyectos.ejs
@@ -4,14 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Centinela</title>
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
+    <title>Responsive Landing Page using HTML, CSS & Javascript</title>
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
@@ -26,7 +19,7 @@
     <!---==== HEADER ==== -->
     <header class="container header">
       <!--==== NAVBAR ==== -->
-      <h1><%= %></h1>
+
       <nav class="nav">
         <div class="logo">
           <h2>Centinela</h2>
@@ -35,12 +28,13 @@
           <button class="close_btn" id="close_btn">
             <i class="ri-close-fill"></i>
           </button>
+
           <ul class="nav_menu_list">
             <li class="nav_menu_item">
-              <a href="/" class="nav_menu_link">inicio</a>
+              <a href="/" class="nav_menu_link">Inicio</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/acercade" class="nav_menu_link">formularios</a>
+              <a href="/acercade" class="nav_menu_link">acerca de</a>
             </li>
             <li class="nav_menu_item">
               <a href="/servicios" class="nav_menu_link">servicios</a>
@@ -56,32 +50,8 @@
       </nav>
     </header>
 
-    <section>
-      <!--Tarjetera nueva  -->
-      <div class="row">
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <img src="images/3.jpeg" alt="" class="img-fluid card-img-top" />
-            <div class="p-4">
-              <h5>
-                <a href="/checklist" class="text-dark">checklist</a>
-              </h5>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-      </div>
-    </section>
-    <!-- - ==== HERO ==== → -->
-
     <footer></footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
     <!--==== ANIMATE ON SCROLL JS CDN -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!--==== GSAP CDN ==== -->
