--- a/views/servicios.ejs
+++ b/views/servicios.ejs
@@ -34,13 +34,16 @@
               <a href="/" class="nav_menu_link">Inicio</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/acercade" class="nav_menu_link">acerca de</a>
+              <a href="/acercade" class="nav_menu_link">formularios</a>
             </li>
             <li class="nav_menu_item">
               <a href="/servicios" class="nav_menu_link">servicios</a>
             </li>
             <li class="nav_menu_item">
               <a href="/contacto" class="nav_menu_link">contacto</a>
+            </li>
+            <li class="nav_menu_item">
+              <a href="/proyectos" class="nav_menu_link">proyectos</a>
             </li>
           </ul>
         </div>
