--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -41,13 +41,16 @@
               <a href="/" class="nav_menu_link">Inicio</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/acercade" class="nav_menu_link">acerca de</a>
+              <a href="/acercade" class="nav_menu_link">formularios</a>
             </li>
             <li class="nav_menu_item">
               <a href="/servicios" class="nav_menu_link">servicios</a>
             </li>
             <li class="nav_menu_item">
               <a href="/contacto" class="nav_menu_link">contacto</a>
+            </li>
+            <li class="nav_menu_item">
+              <a href="/proyectos" class="nav_menu_link">proyectos</a>
             </li>
           </ul>
         </div>
@@ -91,20 +94,11 @@
           </div>
         </section>
       </div>
-
     <footer></footer>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-
-    <!--==== ANIMATE ON SCROLL JS CDN -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!--==== GSAP CDN ==== -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <!--==== SCRIPT.JS ==== -->
-    <script src="./js/main.js" defer></script>
   </body>
 </html>
