--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,26 +26,26 @@
         <h2 class="main__title">Hola Denuevo!</h2>
         <p class="main__paragraph">Bienvenido nuevamente!</p>
 
-        <form class="main__form">
+        <form class="main__form" id="formlogin">
           <input
             type="text"
             placeholder="ingrese su usuario"
             class="main__input"
-            required
+            id="usuario"
           />
 
           <input
             type="email"
             placeholder="ingrese su correo"
             class="main__input"
-            required
+            id="correo"
           />
 
           <input
             type="password"
             placeholder="Contraseña"
             class="main__input"
-            required
+            id="contraseña"
           />
 
           <input
@@ -74,5 +74,6 @@
         </article>
       </div>
     </section>
+    <script src="js/login.js"></script>
   </body>
 </html>
