--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,13 +28,6 @@
 
         <form class="main__form" id="formlogin">
           <input
-            type="text"
-            placeholder="ingrese su usuario"
-            class="main__input"
-            id="usuario"
-          />
-
-          <input
             type="email"
             placeholder="ingrese su correo"
             class="main__input"
@@ -74,6 +67,7 @@
         </article>
       </div>
     </section>
+    <script src="js/sweetalert.js"></script>
     <script src="js/login.js"></script>
   </body>
 </html>
