--- a/views/register.ejs
+++ b/views/register.ejs
@@ -98,6 +98,7 @@
         </article>
       </div>
     </section>
+    <script src="js/sweetalert.js"></script>
     <script src="js/nuevo_usuario.js"></script>
   </body>
 </html>
