--- a/views/servicios.ejs
+++ b/views/servicios.ejs
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Landing Page using HTML, CSS & Javascript</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
@@ -53,13 +59,27 @@
       </nav>
     </header>
 
+    <section>
+      <!--Tarjetera nueva  -->
+      <div class="row">
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+          <div class="bg-white rounded shadow-sm">
+            <img src="images/4.jpg" alt="" class="img-fluid card-img-top" />
+            <div class="p-4">
+              <h5>
+                <a href="/wiki" class="text-dark">wiki</a>
+              </h5>
+            </div>
+          </div>
+        </div>
+        <!-- End -->
+      </div>
+    </section>
+
     <footer></footer>
 
     <!--==== ANIMATE ON SCROLL JS CDN -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!--==== GSAP CDN ==== -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <!--==== SCRIPT.JS ==== -->
     <script src="./js/main.js" defer></script>
   </body>
 </html>
